--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,7 @@
 tasks:
+  - name: cdk
+    before: |
+      npm i -g aws-cdk
   - name: terraform
     before: |
       wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
