--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,31 +4,15 @@ tasks:
       npm i -g aws-cdk
   - name: terraform
     before: |
-      wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-      echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-      sudo apt update && sudo apt install terraform
+      ./bin/terraform_cli_install.sh
   - name: utils
     before: | 
       sudo apt-get install tree
   - name: powershell
+      ./bin/powershell_cli_install.sh
     before: |
-      sudo apt-get update
-      sudo apt-get install -y wget apt-transport-https software-properties-common
-      source /etc/os-release
-      wget -q https://packages.microsoft.com/config/ubuntu/$VERSION_ID/packages-microsoft-prod.deb
-      sudo dpkg -i packages-microsoft-prod.deb
-      rm packages-microsoft-prod.deb
-      sudo apt-get update
-      sudo apt-get install -y powershell
-      #pwsh
-      #Install-Module -Name AWS.Tools.Installer
-      #Install-AWSToolsModule AWS.Tools.EC2, AWS.Tools.S3 -Cleanup
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
     before: |
-      cd /workspace
-      curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      unzip awscliv2.zip
-      sudo ./aws/install
-      cd $THEIA_WORKSPACE_ROOT
+      ./bin/aws_cli_install.sh
